[package]
name = "captcha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
click_captcha = "0.1.16"
rand = "0.8.5"
sonic-rs = "0.3.7"
tokio = { version = "1.38.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
trt = "0.1.29"
vb = "0.1.3"
r = { path = "../../../rust/lib/r" }
intbin = "0.1.2"
prost = "0.12.6"
apart = "0.1.9"
re = "0.1.7"
t3 = "0.1.17"
aok = "0.1.12"

# serde = { version = "1.0.193", features = ["derive"] }
[build-dependencies]
aok = "0.1.12"
prost-build = "0.12.6"
