[package]
name = "webpush"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { path = "../auth" }
client = { path = "../../../rust/lib/client" }
prost = "0.12.6"
re = "0.1.6"
t3 = "0.1.17"
m = { path = "../../../rust/lib/m" }
lang = "0.1.23"
jarg = "0.1.8"
dashmap = "5.5.3"
static_init = "1.0.3"
base64 = "0.22.1"

[build-dependencies]
aok = "0.1.12"
prost-build = "0.12.6"

[package.metadata.cargo-machete]
ignored = ["prost"]
